# eora_t

./: .gitignore  README.md  pyproject.toml
src/: assistant.py  db.py  main.py  parse.py  settings.py  utils.py
